# GLFramework

./: .gitignore  CMakeLists.txt  README.md
GLFramework/: CMakeLists.txt  alibi.cpp  window.cpp
GLFramework/include/: glf.hpp  window.hpp
example/: CMakeLists.txt  MyWindow.hpp  main.cpp
